Resolved an issue where the magnifying glass icon became stretched

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ a:hover {
 
 #magnifying-glass{
     margin: 3px 10px 3px 10px;
+    width: 5%;
 
 }
 #buttons {
